<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="yes"
    >

    <LinearLayout
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/helpHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:gravity="center"

            android:textColor="@color/Red"
            android:text="@string/help_header"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/helpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5dp"

            android:text = "@string/help_text"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/helpTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5dp"

            android:text = "@string/help_text2"
            android:textSize="16sp"

            />
        <TextView
            android:id="@+id/helpTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5dp"

            android:text = "@string/help_text3"
            android:textSize="16sp"

            />
        <ImageView
            android:id="@+id/mediaTypeImageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5dp"


            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/helpHeader2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5dp"
            android:gravity="center"
            android:textColor="@color/Red"
            android:text="@string/help_header2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/helpTextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5dp"

            android:text = "@string/help_text4"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/helpTextView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5dp"

            android:text = "@string/help_text5"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/helpTextView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_5dp"

            android:text = "@string/help_text6"
            android:textSize="16sp"

            />


    </LinearLayout>

</TableLayout>
