<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="yes"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/genreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:text="@string/genre_label" />

        <Spinner
            android:id="@+id/musicGenreSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/spinner_strings"
            android:padding="@dimen/padding_5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/enterSearchTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:text="@string/search_textView" />

        <!-- android:ems Defines the text size based off of the
        specified point size

        android:layout_weight Defines how much of the containing
        area is taken up by this component. Because there is no
        other component by setting it for 1 that means it takes
        up all available space. If you had 2 components and set
        one at 2 and the other at one, the first would take up
        2/3rds of the space and the second would get the last 1/3rd-->

        <EditText
            android:id="@+id/searchScheduleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:padding="@dimen/padding_5dp" >


        </EditText>

        <Button
            android:id="@+id/enterSearchScheduleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:text="@string/enter_schedule_search" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tableRow2a"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
<!--
        <Button
            android:id="@+id/getSavedEvents"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="listTheLastSevenDaysEvents"
            android:text="@string/lastweeksevents" />
-->
    </LinearLayout>



    <LinearLayout
        android:id="@+id/tableRow3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/scrollTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:paddingTop="@dimen/padding_5dp"
            android:text="@string/scroll_view_title"
            android:textColor="@color/Red"
            android:textSize="@dimen/scroll_title_text_size"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:background="@color/egg_shell" >

        <!-- A ScrollView is a scrollable box that contains
        other components that can be added dynamically. The
        ScrollView allows the user to scroll through components
        that can't fit on the users screen -->

        <ScrollView
            android:id="@+id/musicSearchScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:padding="5dp" >

            <!-- android:stretchColumns Defines that you want
            this component to expand in width to fit any extra
            space -->

            <TableLayout
                android:id="@+id/musicSearchTableScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stretchColumns="yes" >
            </TableLayout>
        </ScrollView>

    </LinearLayout>
















</TableLayout>